--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="autoabbr.js"></script>
+<script src="autoabbr.min.js"></script>
 <style type="text/css">
 	.definition {
 		background: #FF9;
