Add makefile for minification, cut new release

--- a/test.html
+++ b/test.html
@@ -35,4 +35,12 @@ Curabitur lobortis, ante at rhoncus cursus, elit nisl commodo urna, quis ferment
 <p>
 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec eu libero ligula. Proin consequat ligula ut lorem auctor non feugiat sapien auctor. Pellentesque semper, justo sollicitudin eleifend consectetur, augue lacus tincidunt mauris, sed placerat augue sapien in justo. Vestibulum fermentum, elit a malesuada iaculis, mi sapien pharetra lacus, ac ullamcorper massa magna at lectus. Maecenas ac neque sed sapien bibendum dictum. Integer odio tortor, ullamcorper sed suscipit sed, aliquet venenatis arcu. Morbi laoreet bibendum nunc, nec tempor urna iaculis sed. Curabitur volutpat molestie euismod. Suspendisse tincidunt, purus nec imperdiet sagittis, felis diam molestie nisl, quis luctus sem dui sit amet arcu.
 </p>
-
+<p>
+Lorem ipsum dolor sit <a href="http://example.com/">vitae varius</a> lorem vitae varius dictum ligula venenatis aliquet.
+</p>
+<p>
+Lorem<br>
+ipsum<br>
+foo<br>
+bar
+</p>
